--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@ body {
     background-position: center;     
     font-family: Arial, sans-serif;     
     background-image: url("https://image.slidesdocs.com/responsive-images/background/simple-white-education-pencil-calculator-art-powerpoint-background_644fe4b2ed__960_540.jpg"); 
-    /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBIfLvoo7mcDZX65MxUHb15LusHahVdd5vJw&s.jpg"); */
+   
     
 }   
 
 .calculator {     
-    background: #a63fdd;  /* Dark Blue */
+    background: rgb(238, 191, 237)
+    ;
     padding: 20px;     
     border-radius: 12px;     
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);     
-    text-align: center;     
+    text-align: center;   
+    border-color: black;  
 }   
 
 #display {     
@@ -32,7 +34,8 @@ body {
     color: #fff;     
     border: none;     
     outline: none;     
-    border-radius: 5px; 
+    border-radius: 5px;
+   
 }   
 
 .buttons {     
@@ -50,11 +53,11 @@ button {
     cursor: pointer;     
     border-radius: 8px;     
     transition: 0.3s ease-in-out;     
-    color: white; 
+    color: rgb(5, 1, 1); 
 }   
 
 button:not(.operator, .equal, .clear, .delete) {     
-    background: #3498DB;
+    background: #7db9e1;
 }   
 
 .operator {     
